help - fix overflow

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body {
 
 .pageWrapper {
     position: relative;
-    overflow-x: clip;
+    overflow-x: hidden;
     height: auto;
 }
 
